se agrego expres y el servidor de este

--- a/javaScript/index.html
+++ b/javaScript/index.html
@@ -23,8 +23,8 @@
         </form>
       </div>
       <dialog id="modal" class="text">
+        <h2 id="modalText"></h2>
         <button id="button" type="button">change color</button>
-        <h2 class="text" id="modalText"></h2>
       </dialog>
     </main>
   </body>
